Bug 596698 - Link target in location bar isn't updated when switching between tabs if link is focused. r=enndeakin, a=blocking2.0-final