dom/base/nsFocusManager.cpp
@@ -1646,6 +1646,10 @@ nsFocusManager::Focus(nsPIDOMWindow* aWindow,
   if (CheckIfFocusable(aContent, aFlags) &&
       mFocusedWindow == aWindow && mFocusedContent == nsnull) {
     mFocusedContent = aContent;
+
+    nsIContent* focusedNode = aWindow->GetFocusedNode();
+    PRBool isRefocus = focusedNode && focusedNode->IsEqual(aContent);
+
     aWindow->SetFocusedNode(aContent, focusMethod);
 
     PRBool sendFocusEvent =
@@ -1682,8 +1686,10 @@ nsFocusManager::Focus(nsPIDOMWindow* aWindow,
       if (!aWindowRaised)
         aWindow->UpdateCommands(NS_LITERAL_STRING("focus"));
 
-      SendFocusOrBlurEvent(NS_FOCUS_CONTENT, presShell, aContent->GetCurrentDoc(),
-                           aContent, aFlags & FOCUSMETHOD_MASK, aWindowRaised);
+      SendFocusOrBlurEvent(NS_FOCUS_CONTENT, presShell,
+                           aContent->GetCurrentDoc(),
+                           aContent, aFlags & FOCUSMETHOD_MASK,
+                           aWindowRaised, isRefocus);
 
       nsIMEStateManager::OnTextStateFocus(presContext, aContent);
     } else {
@@ -1722,15 +1728,17 @@ class FocusBlurEvent : public nsRunnable
 {
 public:
   FocusBlurEvent(nsISupports* aTarget, PRUint32 aType,
-                 nsPresContext* aContext, PRBool aWindowRaised)
+                 nsPresContext* aContext, PRBool aWindowRaised,
+                 PRBool aIsRefocus)
   : mTarget(aTarget), mType(aType), mContext(aContext),
-    mWindowRaised(aWindowRaised) {}
+    mWindowRaised(aWindowRaised), mIsRefocus(aIsRefocus) {}
 
   NS_IMETHOD Run()
   {
     nsFocusEvent event(PR_TRUE, mType);
     event.flags |= NS_EVENT_FLAG_CANT_BUBBLE;
     event.fromRaise = mWindowRaised;
+    event.isRefocus = mIsRefocus;
     return nsEventDispatcher::Dispatch(mTarget, mContext, &event);
   }
 
@@ -1738,6 +1746,7 @@ public:
   PRUint32                mType;
   nsRefPtr<nsPresContext> mContext;
   PRBool                  mWindowRaised;
+  PRBool                  mIsRefocus;
 };
 
 void
@@ -1746,7 +1755,8 @@ nsFocusManager::SendFocusOrBlurEvent(PRUint32 aType,
                                      nsIDocument* aDocument,
                                      nsISupports* aTarget,
                                      PRUint32 aFocusMethod,
-                                     PRBool aWindowRaised)
+                                     PRBool aWindowRaised,
+                                     PRBool aIsRefocus)
 {
   NS_ASSERTION(aType == NS_FOCUS_CONTENT || aType == NS_BLUR_CONTENT,
                "Wrong event type for SendFocusOrBlurEvent");
@@ -1778,7 +1788,7 @@ nsFocusManager::SendFocusOrBlurEvent(PRUint32 aType,
 
   nsContentUtils::AddScriptRunner(
     new FocusBlurEvent(aTarget, aType, aPresShell->GetPresContext(),
-                       aWindowRaised));
+                       aWindowRaised, aIsRefocus));
 }
 
 void
