widget/public/nsGUIEvent.h
@@ -1298,11 +1298,13 @@ class nsFocusEvent : public nsEvent
 public:
   nsFocusEvent(PRBool isTrusted, PRUint32 msg)
     : nsEvent(isTrusted, msg, NS_FOCUS_EVENT),
-      fromRaise(PR_FALSE)
+      fromRaise(PR_FALSE),
+      isRefocus(PR_FALSE)
   {
   }
 
   PRPackedBool fromRaise;
+  PRPackedBool isRefocus;
 };
 
 class nsSelectionEvent : public nsGUIEvent
